--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - name: Checkout the GameShell repo
         uses: actions/checkout@v2
-      - if: ${{ matrix.platform == 'ubuntu-latest' }}
-        name: Install Linux deps
-        run: |
-          sudo apt install gettext man-db psmisc nano tree bsdmainutils zsh
+      # - if: ${{ matrix.platform == 'ubuntu-latest' }}
+      #   name: Install Linux deps
+      #   run: |
+      #     sudo apt install gettext man-db psmisc nano tree bsdmainutils zsh
       # - if: ${{ matrix.platform == 'macos-latest' }}
       #   name: Install macOS deps
       #   run: |
