--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,4 @@ jobs:
       - if: ${{ matrix.platform == 'macos-latest' }}
         name: Run the tests
         run: |
-            SHELL=zsh sh ./test-history.sh
+            SHELL=bash sh ./test-history.sh
