--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,9 +21,9 @@ jobs:
       - if: ${{ matrix.platform == 'ubuntu-latest' }}
         name: Run the tests
         run: |
-            SHELL=bash sh ./test-history.sh
+            SHELL=bash ./test-history.sh
 
       - if: ${{ matrix.platform == 'macos-latest' }}
         name: Run the tests
         run: |
-            SHELL=bash sh ./test-history.sh
+            SHELL=zsh ./test-history.sh
